arreglo el codigo